--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "shopping",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
+  "start": "node server.js",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -14,23 +16,31 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "nodemon": "^2.0.16",
     "react": "^18.1.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-awesome-button": "^6.5.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-form-input-fields": "^1.0.9",
     "react-hook-form": "^7.31.3",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-responsive": "^9.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "sass": "^1.52.1",
+    "stripe": "^10.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
